@@ -4,6 +4,7 @@ following names for their contribution to the product.
 
 == Developers ==
 * Aaron Schulz
+* Alex Z.
 * Alexandre Emsenhuber
 * Andrew Garrett
 * Aryeh Gregor
