@@ -395,6 +395,7 @@ table.collapsed tr.collapsable {
 
 /* Recreating-deleted-page/reupload file warning and log entries */
 div#mw-upload-deleted-warn ul li,
+div#mw-deleted-notice ul li,
 div#mw-recreate-deleted-warn ul li {
 	font-size: 95%;
 }
