@@ -121,6 +121,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   Special:Statistics
 * (bug 15514) Setting $wgRightsText without $wgRightsUrl now produces a 
   plaintext copyright notice. Patch by Juliano F. Ravasi.
+* (bug 15551) Deletion log excerpt is now shown whenever a user vists a 
+  deleted page, even if they are unable to edit it.
 
 === Bug fixes in 1.14 ===
 
